<resources>
    <string name="app_name">PegSolitaire</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_main_menu">Peg Solitaire</string>
    <string name="button_play_text">Play game</string>

    <string name="button_finish_text">Finish game</string>
    <string name="textview_score_text">32</string>

    <string name="game_over">Game Over</string>
    <string name="score_text">Your score is %1$d. You used %2$d seconds.</string>
    <string name="settings">Settings</string>
    <string name="high_scores">High Scores</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_score">High Scores</string>

    <string name="norwegian_flag">Norwegian flag</string>
    <string name="british_flag">British flag</string>
    <string name="select_language">Select language</string>
    <string name="tutorial">Tutorial</string>
    <string name="tutorial_text">
        The game is played by jumping over pegs into open spaces.
        The pegs can jump horizontally or vertically.
        The game ends when there are no more possible moves, and the score is based on the time
        taken to reach this point, as well as how many pegs are left on the board.
        You can choose between two boards, both of which are somewhat similar in difficulty.
    </string>
    <string name="play_standard">Play standard board</string>
    <string name="play_square">Play square board</string>
</resources>
